# YT_DownLoader

./: .env  .env.example  .gitignore  README.md  app.py  config.py  install_launchagent.command  pyproject.toml  requirements.txt  start_backend.command  youtube_downloader.user.js  youtube_downloader_blueprint.md
launchd/: com.local.yt-downloader.plist
