[project]
name = "yt-downloader-local"
version = "0.1.0"
description = "Local YouTube download helper with userscript frontend and Flask backend."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
  "flask>=3.0.0,<4.0.0",
  "flask-cors>=4.0.0,<7.0.0",
  "playwright>=1.55.0,<2.0.0",
  "yt-dlp>=2026.1.0",
  "python-dotenv>=1.0.0,<2.0.0",
]

[tool.uv]
package = false